<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Red"
        android:id="@+id/about_topToolBar"
        android:elevation="3dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/rufit_logo_nbg"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="35dp"
            android:layout_gravity="start"
            android:id="@+id/backButton"
            android:src="@drawable/back_button"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/about_label"
        android:textAlignment="center"
        android:textColor="@color/RowanBrown"
        android:textSize="30sp"
        android:layout_below="@+id/about_topToolBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/about_us_details"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:id="@+id/detail_about"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/creators_title"
        android:layout_below="@+id/detail_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/about_creators_title"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creators_title"
        android:id="@+id/outer_linear"
        android:padding="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row_1"
            android:weightSum="3"
            android:padding="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cath"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/naomi"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/erin"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold|italic"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_2"
        android:weightSum="2"
        android:padding="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shiv"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold|italic"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/klaydon"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold|italic"/>
        </LinearLayout>

    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>