<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Red"
            android:id="@+id/topToolBar"
            android:layout_marginBottom="4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:text="Add Run"
                android:textSize="25sp"
                android:textColor="@color/WhiteSmoke"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_gravity="start"
                android:id="@+id/backbutton_addrunactivity"
                android:src="@drawable/back_button"
                />

        </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/Red"
        android:background="@drawable/rectangle_button"
        android:text="Save"
        android:textColor="@color/AntiqueWhite"
        android:elevation="4dp"
        />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginTop="56dp">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/dateText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="@string/dateLabel" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <EditText
               android:id="@+id/dateEdit"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:ems="10"
               android:onClick="showDatePickerDialog"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/nameText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Name"
               android:layout_gravity="center_vertical" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <EditText
               android:id="@+id/editName"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:ems="10"
               android:inputType="text" />

       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/distanceText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/distanceLabel"
               android:layout_gravity="center_vertical" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <EditText
               android:id="@+id/editDistance"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:ems="10"
               android:inputType="numberDecimal" />

       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/timeText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="@string/timeLabel"/>
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <EditText
               android:id="@+id/editTime"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:ems="10" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/paceText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="@string/paceLabel" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />
           <TextView
               android:id="@+id/paceDisplay"
               android:layout_width="70dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:ems="10"
               android:text="00:00"
               android:textSize="16dp"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/typeText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="Type" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <Spinner
               android:id="@+id/typeSpinner"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:spinnerMode="dropdown"
               android:dropDownWidth="230dp"
               />
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/shoesText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="Shoes" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <Spinner
               android:id="@+id/shoeSpinner"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:spinnerMode="dropdown"/>
       </LinearLayout>
       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/feelText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="@string/feelLabel" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <SeekBar
               android:id="@+id/seekBar"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:max="4"
               android:progressTint="@color/gray_very_light" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingLeft="8dp"
           android:paddingRight="8dp"
           android:layout_margin="6dp">

           <TextView
               android:id="@+id/notesText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="@string/notesLabel" />
           <View
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:layout_weight="1" />

           <EditText
               android:id="@+id/notesEdit"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:ems="10"
               android:inputType="textMultiLine" />
       </LinearLayout>
       </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>